<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.winterhaven-mc</groupId>
	<artifactId>RoadBlock</artifactId>
	<version>1.18.4-SNAPSHOT</version>
	<name>RoadBlock</name>

	<url>https://github.com/tim-savage/RoadBlock</url>

	<description>
		A minecraft plugin that prevents breaking of blocks that have been designated as roads.
	</description>

	<properties>
		<project.author>Tim Savage</project.author>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<licenses>
		<license>
			<name>GNU General Public License v3.0</name>
			<url>https://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/tim-savage/RoadBlock/issues</url>
	</issueManagement>

	<distributionManagement>
		<repository>
			<id>releases</id>
			<url>https://maven.winterhaven-mc.com/repository/releases/</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<url>https://maven.winterhaven-mc.com/repository/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>public</id>
			<url>https://maven.winterhaven-mc.com/repository/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
		<!-- Spigot API -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.18.1-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<!-- bStats -->
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>2.2.1</version>
			<scope>compile</scope>
		</dependency>

		<!-- MessengerLib -->
		<dependency>
			<groupId>com.winterhaven-mc</groupId>
			<artifactId>message-builder-lib</artifactId>
			<version>1.0.4</version>
		</dependency>

		<!-- SoundConfigLib -->
		<dependency>
			<groupId>com.winterhaven-mc</groupId>
			<artifactId>sound-config-lib</artifactId>
			<version>1.16.3</version>
		</dependency>

		<!-- WorldManagerLib -->
		<dependency>
			<groupId>com.winterhaven-mc</groupId>
			<artifactId>world-manager-lib</artifactId>
			<version>1.16.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.36.0.3</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>

		<!-- Mock Bukkit Framework -->
		<dependency>
			<groupId>com.github.seeseemelk</groupId>
			<artifactId>MockBukkit-v1.18</artifactId>
			<version>1.15.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<!-- jar filename -->
		<finalName>${project.name}-${project.version}</finalName>

		<!-- Resources -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<!-- Test Resources -->
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>ban-bad-log4j-versions</id>
						<phase>validate</phase>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<bannedDependencies>
									<excludes>
										<exclude>org.apache.logging.log4j:log4j-core:(,2.17.0)</exclude>
									</excludes>
								</bannedDependencies>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Compile jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>

			<!-- Create Shaded jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>true</minimizeJar>
							<filters>
								<filter>
									<artifact>org.bstats:bstats-*</artifact>
									<excludes>
										<exclude>META-INF/MANIFEST.MF</exclude>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
								<filter>
									<artifact>com.winterhaven-mc:*-lib</artifact>
									<excludes>
										<exclude>META-INF/MANIFEST.MF</exclude>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
							<artifactSet>
								<includes>
									<include>com.winterhaven-mc:message-builder-lib</include>
									<include>com.winterhaven-mc:world-manager-lib</include>
									<include>com.winterhaven-mc:sound-config-lib</include>
									<include>org.bstats</include>
								</includes>
							</artifactSet>
							<relocations>
								<relocation>
									<pattern>com.winterhavenmc.util</pattern>
									<shadedPattern>com.winterhavenmc.roadblock.shaded</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.bstats</pattern>
									<shadedPattern>com.winterhavenmc.roadblock.shaded</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Create Javadoc jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<source>11</source>
					<doclint>all,-missing</doclint>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Create Sources jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Plugin for Unit Tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>

				<configuration>
					<junitArtifactName>org.junit.jupiter:junit-jupiter</junitArtifactName>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>